--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <head>
 <!--定时转到其他页面 -->
-<meta http-equiv="refresh" content="5;url="/netplus/index.html"> 
+<meta http-equiv="refresh" content="0;url=http://nslab-saturn.github.io/netplus/index.html"> 
 </head>
