--- a/netplus/index.html
+++ b/netplus/index.html
@@ -28,20 +28,16 @@
                 <div class="desc">
                     	SaturnLab从事数据管理，智能系统与计算机网络的教学、科研和社会服务工作。
 			</br>
-			SaturnLab努力创新，积极进取，力争突破。
-			</br>
                 </div>
                 <div class="teaching">
 			</br>
-			指导教师：<a href="http://www.researchgate.net/profile/Zhen_Chen16">陈震</a>
+			指导教师：<a href="http://www.icenter.tsinghua.edu.cn/faculty/chenzhen/">陈震</a>
 			</br>
 			合作教师：<a href="http://www.mit.edu/~caoj">曹军威</a>
 			</br>
 			团队教师：
                     <a href="/netplus/teachers/maxiaodong.html">马晓东</a>
                     <a href="/netplus/teachers/zhangyisong.html">章屹松</a>
-                    <a href="/netplus/teachers/wangbeibei.html">王蓓蓓</a>
-                    <a href="/netplus/index.html">高英</a>
 			</br>
 			研究团队：<a href="/netplus/students/student.html">在校学生</a>
 			毕业学生：<a href="/netplus/students/alumni.html">名单</a>
@@ -53,7 +49,6 @@
                     <a href="http://cloud.icenter.tsinghua.edu.cn">清华工业云</a>
                     <a href="http://wiki.icenter.tsinghua.edu.cn">维基平台</a>
                     <a href="http://gitlab.icenter.tsinghua.edu.cn">代码托管</a>
-                    <a href="http://net.icenter.tsinghua.edu.cn">虚拟现实</a>
                 </div>
             </div>
         </div>
