--- a/netplus/index.html
+++ b/netplus/index.html
@@ -26,8 +26,7 @@
             <div class="bd">
                 <img src="/netplus/images/thu.jpg"/>
                 <div class="desc">
-                    	SaturnLab从事数据管理，智能系统与计算机网络的教学、科研和社会服务工作。
-			</br>
+                    	SaturnLab从事智能系统，数据管理与计算机网络的教学、科研和社会服务工作。
                 </div>
                 <div class="teaching">
 			</br>
@@ -36,18 +35,18 @@
 			合作教师：<a href="http://www.mit.edu/~caoj">曹军威</a>
 			</br>
 			团队教师：
-                    <a href="/netplus/teachers/maxiaodong.html">马晓东</a>
-                    <a href="/netplus/teachers/zhangyisong.html">章屹松</a>
+                    		<a href="/netplus/teachers/maxiaodong.html">马晓东</a>
+                    		<a href="/netplus/teachers/zhangyisong.html">章屹松</a>
 			</br>
 			研究团队：<a href="/netplus/students/student.html">在校学生</a>
 			毕业学生：<a href="/netplus/students/alumni.html">名单</a>
 			</br>
-            工作周报：<a href="http://net.icenter.tsinghua.edu.cn/wiki/">每周组会</a>
+            		工作周报：<a href="http://net.icenter.tsinghua.edu.cn/wiki/">每周组会</a>
                 </div>
             </div>
         </div>
         <label class="label label-info copyright">
-            Copyright© 2012 TNLIST-SATURN. All Rights Reserved
+            Copyright© 2012 TNLIST-SATURNLAB. All Rights Reserved
         </label>
     </body>
 
