--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <!--定时转到其他页面 -->
-<meta http-equiv="refresh" content="0;url=http://saturn.github.io/netplus/index.html"> 
+<meta http-equiv="refresh" content="0;url=http://saturn-lab.github.io/netplus/index.html"> 
 </head>
