--- a/netplus/patent.html
+++ b/netplus/patent.html
@@ -31,20 +31,26 @@
                     </thead>
 
                     <thead>
-                        <th>已授权专利(11)</th>
+                        <th>已授权专利(13)</th>
                     </thead>
 
                     <tbody>
                         <tr>
-			                <td>陈震，温禹豪，马戈，曹军威，一种新的压缩比特位图索引的方法, 发明专利，专利号：201410182226.8.</td>
-			            </tr>
+			    <td>曹军威，陈硕，陈震，基于命名机制的分布式网络的存储系统及方法, 发明专利，专利号：2014105036673</td>
+			</tr>
+			<tr>
+			    <td>林闯，徐鲲，陈震，孟坤，虚拟机策略迁移配置方法及装置, 发明专利，专利号：2015105877368</td>
+			</tr>
+			<tr>
+			    <td>陈震，温禹豪，马戈，曹军威，一种新的压缩比特位图索引的方法, 发明专利，专利号：201410182226.8.</td>
+			</tr>
                         <tr>
                             <td>陈震，温禹豪，马戈，曹军威，压缩比特位图索引的方法，发明专利，专利号：201410085209.2.</td>
                         </tr>
                         <tr>
-			                <td>谢峰，冯喜伟，陈震，曹军威，基于线性回归的推荐方法及系统， 发明专利，专利号：201410148936.</td>
-			            </tr>
-			            <tr>
+			    <td>谢峰，冯喜伟，陈震，曹军威，基于线性回归的推荐方法及系统， 发明专利，专利号：201410148936.</td>
+			</tr>
+			<tr>
                             <td>谢峰, 陈震, 许宏峰, 曹军威，基于相似性传递的协同过滤方法及系统， 发明专利，专利号：201310221379.</td>
                         </tr>
                         <tr>
@@ -52,8 +58,8 @@
                         </tr>
                         <tr>
                             <td>陈震，李军，曹军威，黄霁崴，微博用户影响力的评估方法及装置， 发明专利，专利号：201210459217.X.</td>
-		            	</tr>
-            			<tr>
+		        </tr>
+            		<tr>
                             <td>谢峰，陈震，曹军威，基于灰色预测模型的推荐方法及系统，发明专利，专利号：201210167851.6.</td>
                         </tr>
                         <tr>
