--- a/netplus/paper.html
+++ b/netplus/paper.html
@@ -27,18 +27,19 @@
                 <div class="well">
                     <label class="label label-success">近期发表论文（2016年以后）</label>
                     <ul>
-						<li><a href="http://ieeexplore.ieee.org/document/7796869/">Chenxing Li, Zhen Chen, Wenxun Zheng, Yinjun Wu, Junwei Cao, BAH: A Bitmap Index Compression Algorithm for Fast Data Retrieval(accepted), 41st Annual IEEE Conference on Local Computer Networks, 2016.</a></li>
-						<li><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=7448840">Yinjun Wu, Zhen Chen, Junwei Cao, Haoxun Li, Chenxing Li, Yijie Wang, Wenxun Zheng, Jiahui Chang, Jing Zhou, Ziwei Hu, and Jinghong Guo, CAMP: A new bitmap index for data retrieval in traffic archival, IEEE Communication Letters, Vol. 20, No. 6, pp.1128 - 1131, June 2016.</a></li>
-						<li><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=7510827">Yuhao Wen, Han Wang, Zhen Chen, Junwei Cao, Guodong Peng, Wen-Liang Huang,Ziwei Hu, Jing Zhou and Jinghong Guo, MASC: A Bitmap Index Encoding Algorithm for Fast Data Retrieval,  IEEE International Conference on Communications (ICC), Kuala Lumpur, Malaysia, 05/2016.</a></li>
-						<li><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=7442497">Yinjun Wu, Zhen Chen, Yuhao Wen, Wenxun Zheng, Junwei Cao, COMBAT: A new bitmap index coding algorithm for Big Data, Tsinghua Science & Technology, 21(2), pp.136-145, 04/2016.</a></li>
-		            </ul>
+			<li><a href="https://ieeexplore.ieee.org/document/7966907">Zheng, Wenxun, Yin Liu, Zhen Chen, and Junwei Cao. "CODIS: A New Compression Scheme for Bitmap Indexes." In Proceedings of the Symposium on Architectures for Networking and Communications Systems, pp. 103-104. IEEE Press, 2017.</a></li>						
+			<li><a href="https://ieeexplore.ieee.org/document/7796869/">Chenxing Li, Zhen Chen, Wenxun Zheng, Yinjun Wu, Junwei Cao, BAH: A Bitmap Index Compression Algorithm for Fast Data Retrieval(accepted), 41st Annual IEEE Conference on Local Computer Networks, 2016.</a></li>
+			<li><a href="https://ieeexplore.ieee.org/document/7448840">Yinjun Wu, Zhen Chen, Junwei Cao, Haoxun Li, Chenxing Li, Yijie Wang, Wenxun Zheng, Jiahui Chang, Jing Zhou, Ziwei Hu, and Jinghong Guo, CAMP: A new bitmap index for data retrieval in traffic archival, IEEE Communication Letters, Vol. 20, No. 6, pp.1128 - 1131, June 2016.</a></li>
+			<li><a href="https://ieeexplore.ieee.org/document/7510827">Yuhao Wen, Han Wang, Zhen Chen, Junwei Cao, Guodong Peng, Wen-Liang Huang,Ziwei Hu, Jing Zhou and Jinghong Guo, MASC: A Bitmap Index Encoding Algorithm for Fast Data Retrieval,  IEEE International Conference on Communications (ICC), Kuala Lumpur, Malaysia, 05/2016.</a></li>
+			<li><a href="https://ieeexplore.ieee.org/document/7442497">Yinjun Wu, Zhen Chen, Yuhao Wen, Wenxun Zheng, Junwei Cao, COMBAT: A new bitmap index coding algorithm for Big Data, Tsinghua Science & Technology, 21(2), pp.136-145, 04/2016.</a></li>
+		    </ul>
                     <label class="label label-success">2015年-2014年</label>
                     <ul>
-						<p class="style2"><a href="./paper3.html">文章列表</a></p>
+			<p class="style2"><a href="./paper3.html">文章列表</a></p>
                     </ul>
                     <label class="label label-success">2014年以前</label>
                     <ul>
-						<p class="style2"><a href="./paper2.html">文章列表</a></p>
+			<p class="style2"><a href="./paper2.html">文章列表</a></p>
                     </ul>
                 </div>
             </div>
