--- a/netplus/patent.html
+++ b/netplus/patent.html
@@ -27,7 +27,7 @@
             <div class="bd">
                 <table class="table table-striped table-hover">
                     <thead>
-                        <th><a href="http://www.pss-system.gov.cn/">中国专利查询</a></th>
+                        <th><a href="http://cpquery.cnipa.gov.cn/">中国专利查询</a></th>
                     </thead>
 
                     <thead>
