--- a/netplus/paper.html
+++ b/netplus/paper.html
@@ -25,7 +25,7 @@
             </div>
             <div class="bd">
                 <div class="well">
-                    <label class="label label-success">近期发表论文（2016年以后）</label>
+                    <label class="label label-success">2016年-至今</label>
                     <ul>
 			<li><a href="https://ieeexplore.ieee.org/document/7966907">Zheng, Wenxun, Yin Liu, Zhen Chen, and Junwei Cao. "CODIS: A New Compression Scheme for Bitmap Indexes." In Proceedings of the Symposium on Architectures for Networking and Communications Systems, pp. 103-104. IEEE Press, 2017.</a></li>						
 			<li><a href="https://ieeexplore.ieee.org/document/7796869/">Chenxing Li, Zhen Chen, Wenxun Zheng, Yinjun Wu, Junwei Cao, BAH: A Bitmap Index Compression Algorithm for Fast Data Retrieval(accepted), 41st Annual IEEE Conference on Local Computer Networks, 2016.</a></li>
